make sure the review page is visible when used as a page in its own right

--- a/app/assets/stylesheets/kata.scss
+++ b/app/assets/stylesheets/kata.scss
@@ -26,8 +26,6 @@
   font-size: 18px;
 }
 
-#review-page { display: none; }
-
 #kata-page
 {
   margin: { top: 15px; left: 45px; }
